# fastmcp-builder-template

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  fastmcp.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: add-tool.md  design-fastmcp.md
.github/workflows/: ci.yml
commands/: review-manifest.md
docs/: check-audit.md  claude-code-workflow.md  fastmcp-patterns.md  git-workflow.md  mcp-primitives.md  plugin-audit.md  prompt-design.md  raw-mcp-to-fastmcp-v3.md  resource-design.md  safety-boundaries.md  tool-design.md
docs/upstream/: fastmcp-llms.md
examples/: capability_manifest.json  minimal_server.py  notes_server.py  prompt_example.py  resource_example.py  tool_example.py
examples/notes/: architecture.md  getting-started.md
scripts/: bootstrap.sh  refresh-fastmcp-docs.sh  smoke.sh
skills/fastmcp-build-loop/: SKILL.md
skills/fastmcp-design-review/: SKILL.md
skills/fastmcp-scaffold-author/: SKILL.md
skills/mcp-primitive-classification/: SKILL.md
specs/: mcp-compliance-checks.md
src/fastmcp_builder/: __init__.py  checks.py  docs.py  extract.py  models.py  review.py  (+2 more)
tests/: test_check_prompt_arg_descriptions.py  test_check_resource_mime_type.py  test_check_tool_annotations.py  test_contract_suggestions.py  test_cross_project_mode.py  test_every_finding_has_citation.py  test_extract.py  test_fastmcp_snapshot.py  test_manifest_review.py  test_notes_server.py  test_primitive_classifier.py  test_prompt_name_format.py  test_scaffold_output.py  test_server_smoke.py  test_silent_error_returns.py  test_skill_invocation_policy.py  test_tool_name_format.py  test_uri_stability.py
(+5 files in other folders)
