[project]
name = "fastmcp-builder-template"
version = "0.1.0"
description = "Local-first FastMCP v3 builder scaffold for designing and reviewing MCP servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==3.2.4",
    "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
