[project]
name = "fastmcp-builder-template"
version = "0.3.0"
description = "Local-first FastMCP v3 builder scaffold for designing and reviewing MCP servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==3.2.4",
    "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "examples"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Minimal ruleset focused on catching the failure mode that slipped through
# this round: dead/unreachable code, unused imports, redefinition.
# F841 = local assigned but never used
# F811 = redefinition of unused names
# F401 = imported but unused
# E712 = comparison-to-True/False
select = ["F", "E"]
ignore = [
    "E501",  # line length — formatter's job, not the linter's
    "E731",  # lambda assignment — not relevant here
]
